--- a/lnrpc/rest-annotations.yaml
+++ b/lnrpc/rest-annotations.yaml
@@ -304,3 +304,7 @@ http:
       get: "/v2/watchtower/client/stats"
     - selector: wtclientrpc.WatchtowerClient.Policy
       get: "/v2/watchtower/client/policy"
+
+    # protos/replicator/replicator.proto
+    - selector: replicator.Replicator.GetBlockSequence
+      get: "/v2/replicator/blocksequence/{name}"
